[FEAT] Added styles for dark and white themes.

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -15,7 +15,7 @@
   &__title {
     font-size: 3.2rem;
     margin: 64px 0 48px;
-    color: $primary-color;
+    color: $ultramarine;
     text-align: center;
   }
   &__info {
@@ -37,6 +37,17 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+}
+
+.dark {
+  .about {
+    &__title {
+      color: $ultramarine;
+    }
+    &__info {
+      color: $white;
+    }
+  }
 }
 
 @media screen and (min-width: 768px) {
