--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,9 +1,10 @@
-$main-blue: #03203a;
+// Main colors
 $gray: #9999a1;
 $white: #e5ebeb;
 $black: #161616;
-$blue-active: #053661;
-$blue-inactive: #02111d;
-$shadow-color: #00000033;
-$primary-color: #4361ee;
-$space-cadet: #21275b;
+$oxford: #03203a;
+$ultramarine: #4361ee;
+
+//  Theme colors
+$dark: #222;
+$light: #eee;
