--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -6,7 +6,7 @@
   margin-bottom: 24px;
   border-radius: 50% 50% 10px 10px;
   overflow: hidden;
-  background-color: $primary-color;
+  background-color: $ultramarine;
 
   & img {
     object-fit: contain;
@@ -26,7 +26,7 @@
   font-size: 3rem;
   font-weight: 500;
   margin: 4px;
-  color: $primary-color;
+  color: $ultramarine;
 }
 .buttons__container {
   gap: 8px;
@@ -48,14 +48,14 @@
   background-color: hsl(229, 60%, 45%);
 
   &:hover {
-    background-color: $primary-color;
+    background-color: $ultramarine;
   }
 }
 .second__button {
   font-weight: 600;
   line-height: 48px;
   font-size: 1.4rem;
-  border: 2px solid $primary-color;
+  border: 2px solid $ultramarine;
 
   display: flex;
   align-items: center;
@@ -63,7 +63,7 @@
   gap: 4px;
 
   &:hover {
-    background-color: $primary-color;
+    background-color: $ultramarine;
 
     & span,
     & svg {
@@ -74,8 +74,38 @@
 
   & span,
   & svg {
-    fill: $primary-color;
-    color: $primary-color;
+    fill: $ultramarine;
+    color: $ultramarine;
+  }
+}
+
+.dark {
+  .home__image {
+    background-color: $ultramarine;
+  }
+  .home__caption,
+  .home__description {
+    color: $white;
+  }
+
+  .second__button {
+    border: 2px solid $white;
+
+    &:hover {
+      background-color: $white;
+
+      & span,
+      & svg {
+        color: $ultramarine;
+        fill: $ultramarine;
+      }
+    }
+
+    & span,
+    & svg {
+      fill: $white;
+      color: $white;
+    }
   }
 }
 
