--- a/src/styles/Portfolio.scss
+++ b/src/styles/Portfolio.scss
@@ -1,24 +1,11 @@
 @import './global.scss';
 
-.projects__grid::-webkit-scrollbar {
-  height: 8px;
-  border-radius: 3px;
-  background-color: $main-blue;
-
-  &-thumb {
-    background-color: $space-cadet;
-    border-radius: 4px;
-  }
-  &-thumb:hover {
-    background-color: $primary-color;
-  }
-}
 .portfolio__title {
   font-size: 3.2rem;
   padding-top: 32px;
   margin: 32px 0 48px;
   text-align: center;
-  color: $primary-color;
+  color: $ultramarine;
 }
 .portfolio__image {
   width: 100%;
@@ -27,7 +14,6 @@
 .projects__grid {
   gap: 24px;
   overflow-x: auto;
-  // padding: 0 24px;
 
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
