--- a/src/styles/Project.scss
+++ b/src/styles/Project.scss
@@ -15,7 +15,7 @@
     border-radius: 20px 20px 0 0;
     transform: translateY(100%);
     transition: all 0.4s;
-    background-color: $primary-color;
+    background-color: $ultramarine;
 
     & * {
       color: $white;
