--- a/src/styles/MainContainer.scss
+++ b/src/styles/MainContainer.scss
@@ -8,16 +8,10 @@
   max-width: 1200px;
   border-radius: 12px;
 
-  background-color: white;
+  background-color: var(--container);
   box-shadow: 2px 2px 8px rgba($black, 0.2);
 
   display: flex;
   align-items: center;
   flex-direction: column;
-}
-
-.dark {
-  .main__container {
-    background-color: $black;
-  }
 }
