--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -11,7 +11,7 @@
   justify-content: center;
   z-index: 2;
 
-  background-color: white;
+  background-color: var(--container);
   box-shadow: 0px 2px 4px rgba($black, 0.1);
 
   &__icon {
@@ -29,7 +29,7 @@
     & span {
       font-size: 1.2rem;
       user-select: none;
-      color: $gray;
+      color: var(--navIcon);
     }
     &:hover span,
     &:hover svg {
@@ -42,7 +42,7 @@
     & svg {
       width: 48px;
       height: 48px;
-      fill: $gray;
+      fill: var(--navIcon);
     }
   }
 }
@@ -54,11 +54,11 @@
   flex-direction: column;
   align-items: stretch;
   border-radius: 8px;
-  border: 1px solid $gray;
+  border: 1px solid var(--navIcon);
   position: absolute;
   right: 4px;
   bottom: -8px;
-  background-color: white;
+  background-color: var(--container);
   transform: translateY(100%);
   overflow: hidden;
 
@@ -66,45 +66,10 @@
     padding: 8px 18px;
     border: transparent;
     border-radius: 0;
+    background-color: var(--container);
     &:hover {
       background-color: $ultramarine;
-      color: white;
-    }
-  }
-}
-
-.dark {
-  .navbar {
-    background-color: $black;
-    box-shadow: 0px 2px 4px rgba($dark, 0.1);
-
-    &__icon {
-      & span {
-        font-size: 1.2rem;
-        user-select: none;
-        color: $white;
-      }
-      &:hover span,
-      &:hover svg {
-        color: $ultramarine;
-        fill: $ultramarine;
-      }
-      & svg {
-        fill: $white;
-      }
-    }
-  }
-  & .navbar__aside {
-    border: 1px solid $white;
-
-    & button {
-      background-color: $black;
-      color: $white;
-
-      &:hover {
-        background-color: $ultramarine;
-        color: white;
-      }
+      color: var(--text);
     }
   }
 }
